Initial attributes on columns commit for QP